# lark-agent

./: .env.example  .gitignore  AGENTS.md  Procfile  README.md  _test_dashboard.py  config-guide.md  config.example.json  package-lock.json  package.json  pipeline-delivery-report.md  pyproject.toml  requirements.txt  server.py  个人阶段成果小结.md  技术方案设计文档.md
.joycode/: project.json
backend/: pyproject.toml  query_artifacts.py  run.py  test_doubao.py  test_doubao_full.py  test_e2e_flow.py  test_runner_return.py  test_stage_runner.py  update_checkpoint.py  update_checkpoint.sql
backend/app/: main.py
backend/app/agents/: code_patch_agent.py  delivery_agent.py  design_agent.py  mock_agents.py  profiles.py  requirement_agent.py  review_agent.py  runner.py  test_agent.py
backend/app/api/: routes_artifact.py  routes_checkpoint.py  routes_delivery.py  routes_pipeline.py  routes_provider.py  routes_workspace.py
backend/app/db/: base.py  session.py
backend/app/models/: artifact.py  checkpoint.py  pipeline.py  provider.py  stage.py  workspace.py
backend/app/schemas/: agent_outputs.py  artifacts.py  checkpoint.py  pipeline.py  provider.py  workspace.py
backend/archive/: approve_checkpoint.py  mock_agents.py  mock_provider.py  query_artifacts2.py  query_artifacts3.py  query_checkpoint.py  test_agent_runner.py  test_checkpoint.py  test_doubao_full2.py  test_doubao_full3.py  test_e2e_flow.py  test_full_flow.py  test_json_parse.py  test_parse_response.py
backend/tests/: test_api_key.py  test_provider.py  test_runner.py  test_schemas.py  test_state_machine.py  test_workspace.py
(+326 files in other folders)
